--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "node server.js",
+    "build": "npm i",
     "dev": "nodemon server.js"
   },
   "description": ""
